--- a/src/assets/i18n/components/sidenav/pt-BR.json
+++ b/src/assets/i18n/components/sidenav/pt-BR.json
@@ -6,5 +6,7 @@
   "sidenav.policePanel": "Painel da Polícia",
   "sidenav.firefighterPanel": "Painel dos Bombeiros",
   "sidenav.ambulancePanel": "Painel da Ambulância",
-  "sidenav.emergency": "Emergência"
+  "sidenav.emergency": "Emergência",
+  "sidenav.logs": "Logs gerais",
+  "sidenav.view-logs": "Visualizar Logs"
 }
