--- a/src/assets/i18n/components/view-notifications/pt-BR.json
+++ b/src/assets/i18n/components/view-notifications/pt-BR.json
@@ -1,3 +1,3 @@
 {
-  "view-notifications": "Lista de notificações de chamados de emergência"
+  "view-notifications.msg": "Lista de notificações de chamados de emergência"
 }
