--- a/src/assets/i18n/components/admin/en.json
+++ b/src/assets/i18n/components/admin/en.json
@@ -1,7 +1,9 @@
 {
+  "admin.idLabel": "ID",
   "admin.addUserBtn": "Add User",
   "admin.msg": "List of registered users",
   "admin.nameLabel": "Name",
   "admin.emailLabel": "Email",
-  "admin.serviceLabel": "Service"
+  "admin.serviceLabel": "Service",
+  "admin.deleteLabel": "Delete"
 }
